<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/purple_500"
            android:elevation="4dp"
            app:contentInsetStart="0dp"
            app:theme="@style/ToolBarStyle" />

    </LinearLayout>






    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText

                    android:id="@+id/editTextLink"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/text_hint_link"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/infoButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    android:autoSizeMaxTextSize="14sp"
                    android:background="@drawable/ic_button_background"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="?"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/editTextDirectory"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/text_hint_directory"
                    android:inputType="textUri"
                    android:minHeight="48dp"
                    android:text="/sdcard/Download/" />

                <Button
                    android:id="@+id/infoButton2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    android:autoSizeMaxTextSize="14sp"
                    android:background="@drawable/ic_button_background"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="?"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@drawable/ic_radio_background"
                android:gravity="center"
                android:visibility="visible">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginBottom="15dp"
                    android:text="@string/text_group_quality" />

                <RadioButton
                    android:id="@+id/radioButton720"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="50dp"
                    android:clickable="false"
                    android:text="720p max" />

                <RadioButton
                    android:id="@+id/radioButton480"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="false"
                    android:text="480p max" />

                <RadioButton
                    android:id="@+id/radioButton360"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="false"
                    android:text="360p max" />

                <RadioButton
                    android:id="@+id/radioButtonAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/text_audio_button" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:indeterminate="true"
                    android:indeterminateTint="#3F51B5"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/stopbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#B31EE9"
                    android:foregroundTint="@color/white"
                    android:text="Stop"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_wait_tv"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/text_download_button"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/textViewWait"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_layout_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_layout"/>

</androidx.drawerlayout.widget.DrawerLayout>